--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -1,10 +1,10 @@
 {
   "title": "Học Tiếng Anh qua video",
-  "app_name": "SpeakOut",
+  "app_name": "Let's Speak",
   "public_video": "Cộng đồng",
-  "your_videos": "Video của bạn",
+  "your_videos": "Video của tôi",
   "logout": "Đăng xuất",
-  "about": "Về SpeakOut",
+  "about": "Về Let's Speak",
   "login": "Đăng nhập",
   "email": "Email",
   "txt_name": "Tên",
@@ -25,13 +25,13 @@
   "skip": "Bỏ qua",
   "sign_in_with_google": "Đăng nhập với Google",
   "x_y_sentences": "Hoàn thành {x}/{y} câu",
-  "welcome": "Chào mừng bạn đến với SpeakOut!",
+  "welcome": "Chào mừng bạn đến với Let's Speak!",
   "choose_first_language": "Chọn ngôn ngữ bản địa của bạn:",
   "note": "Lưu ý",
   "submit": "Gửi",
   "choose_first_language_desc": "Phụ đề sẽ được tự động dịnh sang ngôn ngữ của bạn.",
   "practice_everywhere": "Luyện nói tiếng Anh mọi lúc, mọi nơi",
-  "switch_lang_message": "Để SpeakOut có thể hiểu được ngôn ngữ tiếng Anh, vui lòng chuyển ngôn ngữ điện thoại thành English.",
+  "switch_lang_message": "Để Let's Speak có thể hiểu được ngôn ngữ tiếng Anh, vui lòng chuyển ngôn ngữ điện thoại thành English.",
   "tap_to_repeat": "Hướng dẫn 1\nBạn có thể chạm vào biểu tượng vòng lặp để nghe lại.",
   "tap_to_speak": "Hướng dẫn 2\nChạm vào biểu tượng microphone và đọc để kiểm tra phát âm của bạn.",
   "add_video": "Thêm video",
