--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -58,7 +58,7 @@
   "switch_lang_message": "To help Bobby can understand your speak in English, please change phone language to English.",
   "tap_to_repeat": "Guideline 1\nTap the repeat icon to listen again.",
   "tap_to_speak": "Guideline 2\nTap the microphone icon and speak to check your pronunciation.",
-  "add_video": "Request Video",
+  "add_video": "Add Video",
   "video_id": "YouTube video link",
   "view_on_youtube": "View on Youtube",
   "edit_transcript": "Edit Transcript",
