Update i10n fix YoutubePlayerPage

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,6 +14,9 @@
   "reset_password": "Reset password",
   "validator_email_empty": "Email can't be empty",
   "validator_email_invalid": "Email is invalid",
+  "validator_password_empty": "Password can't be empty",
+  "validator_password_length": "Enter a password with length at least 6 characters",
+  "validator_name_empty": "Name can't be empty",
   "reset_password_sent": "Reset password link has been sent. Please check your mail box!",
   "unknown_error": "Unknown error!",
   "sign_up": "Sign Up",
