--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -15,6 +15,9 @@
   "reset_password": "Đặt lại mật khẩu",
   "validator_email_empty": "Vui lòng nhập email",
   "validator_email_invalid": "Email không hợp lệ",
+  "validator_password_empty": "Vui lòng nhập mật khẩu",
+  "validator_password_length": "Vui lòng nhập mật khẩu ít nhất 6 ký tự",
+  "validator_name_empty": "Vui lòng nhập tên",
   "reset_password_sent": "Liên kết đặt lại mật khẩu đã được gửi tới email của bạn. Vui lòng kiểm tra!",
   "unknown_error": "Lỗi không xác định!",
   "sign_up": "Đăng ký",
