--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,6 +19,7 @@
   "validator_name_empty": "Name can't be empty",
   "reset_password_sent": "Reset password link has been sent. Please check your mail box!",
   "unknown_error": "Unknown error!",
+  "error_login_failed": "Email or password is not correct, please check again.",
   "sign_up": "Sign Up",
   "go_to_marketplace": "You don't have any video yet, Press here to find some!",
   "add_to_my_video_list": "Add",
