add delete account

--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -3,6 +3,7 @@
   "app_name": "Let's Speak",
   "public_video": "Cộng đồng",
   "your_videos": "Video của tôi",
+  "settings": "Cài đặt",
   "logout": "Đăng xuất",
   "about": "Về Let's Speak",
   "login": "Đăng nhập",
@@ -18,6 +19,7 @@
   "validator_password_empty": "Vui lòng nhập mật khẩu",
   "validator_password_length": "Vui lòng nhập mật khẩu ít nhất 6 ký tự",
   "validator_name_empty": "Vui lòng nhập tên",
+  "validator_email_incorrect": "Email không đúng",
   "reset_password_sent": "Liên kết đặt lại mật khẩu đã được gửi tới email của bạn. Vui lòng kiểm tra!",
   "unknown_error": "Lỗi không xác định!",
   "error_login_failed": "Email hoặc mật không không đúng, vui lòng kiểm tra lại.",
@@ -33,6 +35,8 @@
   "choose_first_language": "Chọn ngôn ngữ bản địa của bạn:",
   "note": "Lưu ý",
   "submit": "Gửi",
+  "delete": "Xoá",
+  "delete_account": "Xoá tài khoản",
   "choose_first_language_desc": "Phụ đề sẽ được tự động dịnh sang ngôn ngữ của bạn.",
   "practice_everywhere": "Luyện nói tiếng Anh mọi lúc, mọi nơi",
   "switch_lang_message": "Để Let's Speak có thể hiểu được ngôn ngữ tiếng Anh, vui lòng chuyển ngôn ngữ điện thoại thành English.",
