--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,7 @@
   "app_name": "Let's Speak",
   "public_video": "Community",
   "your_videos": "My videos",
+  "settings": "Settings",
   "logout": "Logout",
   "about": "About Let's Speak",
   "login": "Login",
@@ -17,6 +18,7 @@
   "validator_password_empty": "Password can't be empty",
   "validator_password_length": "Enter a password with length at least 6 characters",
   "validator_name_empty": "Name can't be empty",
+  "validator_email_incorrect": "Input email is incorrect",
   "reset_password_sent": "Reset password link has been sent. Please check your mail box!",
   "unknown_error": "Unknown error!",
   "error_login_failed": "Email or password is not correct, please check again.",
@@ -57,6 +59,9 @@
   "choose_first_language": "Please choose your first language:",
   "note": "Note",
   "submit": "Send",
+  "delete": "Delete",
+  "delete_account": "Delete account",
+  "confirm_delete_account": "PERMANENTLY DELETE",
   "choose_first_language_desc": "Transcript will be translated into your first language.",
   "practice_everywhere": "Practice English 24/7 from everywhere",
   "switch_lang_message": "To help Bobby can understand your speak in English, please change phone language to English.",
